3xtrat3rr3str3D-backend/src/main/java/org/jrg/antlrBase/pigLatin/PigLatinParser.java
// Generated from org/jrg/antlrBase/pigLatin/PigLatin.g4 by ANTLR 4.13.2
package org.jrg.antlrBase.pigLatin;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PigLatinParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IMPORT=1, VARIABILES=2, MAIOR=3, FINIS=4, NUMERUS=5, TEXTUM=6, DECIMALIS=7, 
		LITTERA=8, BOOL=9, VERUM=10, FALSUS=11, NULL=12, ESTO=13, SERIES=14, NOVUS=15, 
		SI=16, ALITER=17, DUM=18, FACERE=19, PER=20, INTERRUMPE=21, PERGE=22, 
		FINIS_BLOQUE=23, NON=24, LEER=25, IMPRIMIR=26, INCREMENTO=27, DECREMENTO=28, 
		IGUAL_QUE=29, DIFERENTE_QUE=30, MAYOR_IGUAL_QUE=31, MENOR_IGUAL_QUE=32, 
		MAYOR_QUE=33, MENOR_QUE=34, AND=35, OR=36, ASIGNACION=37, SUMA=38, RESTA=39, 
		MULT=40, DIV=41, CORCHETE_IZQ=42, CORCHETE_DER=43, LLAVE_IZQ=44, LLAVE_DER=45, 
		PAR_IZQ=46, PAR_DER=47, PUNTO_Y_COMA=48, DOS_PUNTOS=49, COMA=50, PUNTO=51, 
		CADENA=52, CARACTER=53, DECIMAL=54, ENTERO=55, IDENTIFICADOR=56, COMENTARIO_LINEA=57, 
		COMENTARIO_BLOQUE=58, ESPACIOS_BLANCO=59;
	public static final int
		RULE_programa = 0, RULE_seccion_importaciones = 1, RULE_ruta_importacion = 2, 
		RULE_seccion_global_variables = 3, RULE_seccion_maior = 4, RULE_tipo_dato = 5, 
		RULE_variable_asignable = 6, RULE_expresion = 7, RULE_valor_primitivo = 8, 
		RULE_lista_expresiones = 9, RULE_lista_atributos_instancia = 10, RULE_atributo_instancia = 11, 
		RULE_declaracion_variable = 12, RULE_fila_matriz_pig = 13, RULE_asignacion = 14, 
		RULE_instruccion_flujo = 15, RULE_bloque = 16, RULE_condicional = 17, 
		RULE_ciclo = 18, RULE_init_per = 19, RULE_paso_per = 20, RULE_instruccion_lectura = 21, 
		RULE_instruccion_impresion = 22, RULE_elemento_imprimir = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "seccion_importaciones", "ruta_importacion", "seccion_global_variables", 
			"seccion_maior", "tipo_dato", "variable_asignable", "expresion", "valor_primitivo", 
			"lista_expresiones", "lista_atributos_instancia", "atributo_instancia", 
			"declaracion_variable", "fila_matriz_pig", "asignacion", "instruccion_flujo", 
			"bloque", "condicional", "ciclo", "init_per", "paso_per", "instruccion_lectura", 
			"instruccion_impresion", "elemento_imprimir"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'import'", "'VARIABILES'", "'MAIOR'", "'FINIS'", "'numerus'", 
			"'textum'", "'decimalis'", "'littera'", "'bool'", "'verum'", "'falsus'", 
			"'null'", "'esto'", "'series'", "'novus'", "'si'", "'aliter'", "'dum'", 
			"'facere'", "'per'", "'interrumpe'", "'perge'", "'finis'", "'non'", "'<<'", 
			"'>>'", "'++'", "'--'", "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", 
			"'&&'", "'||'", "'='", "'+'", "'-'", "'*'", "'/'", "'['", "']'", "'{'", 
			"'}'", "'('", "')'", "';'", "':'", "','", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IMPORT", "VARIABILES", "MAIOR", "FINIS", "NUMERUS", "TEXTUM", 
			"DECIMALIS", "LITTERA", "BOOL", "VERUM", "FALSUS", "NULL", "ESTO", "SERIES", 
			"NOVUS", "SI", "ALITER", "DUM", "FACERE", "PER", "INTERRUMPE", "PERGE", 
			"FINIS_BLOQUE", "NON", "LEER", "IMPRIMIR", "INCREMENTO", "DECREMENTO", 
			"IGUAL_QUE", "DIFERENTE_QUE", "MAYOR_IGUAL_QUE", "MENOR_IGUAL_QUE", "MAYOR_QUE", 
			"MENOR_QUE", "AND", "OR", "ASIGNACION", "SUMA", "RESTA", "MULT", "DIV", 
			"CORCHETE_IZQ", "CORCHETE_DER", "LLAVE_IZQ", "LLAVE_DER", "PAR_IZQ", 
			"PAR_DER", "PUNTO_Y_COMA", "DOS_PUNTOS", "COMA", "PUNTO", "CADENA", "CARACTER", 
			"DECIMAL", "ENTERO", "IDENTIFICADOR", "COMENTARIO_LINEA", "COMENTARIO_BLOQUE", 
			"ESPACIOS_BLANCO"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PigLatin.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PigLatinParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public Seccion_maiorContext seccion_maior() {
			return getRuleContext(Seccion_maiorContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PigLatinParser.EOF, 0); }
		public Seccion_importacionesContext seccion_importaciones() {
			return getRuleContext(Seccion_importacionesContext.class,0);
		}
		public Seccion_global_variablesContext seccion_global_variables() {
			return getRuleContext(Seccion_global_variablesContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinVisitor ) return ((PigLatinVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(48);
				seccion_importaciones();
				}
				break;
			}
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARIABILES) {
				{
				setState(51);
				seccion_global_variables();
				}
			}

			setState(54);
			seccion_maior();
			setState(55);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Seccion_importacionesContext extends ParserRuleContext {
		public List<TerminalNode> IMPORT() { return getTokens(PigLatinParser.IMPORT); }
		public TerminalNode IMPORT(int i) {
			return getToken(PigLatinParser.IMPORT, i);
		}
		public List<Ruta_importacionContext> ruta_importacion() {
			return getRuleContexts(Ruta_importacionContext.class);
		}
		public Ruta_importacionContext ruta_importacion(int i) {
			return getRuleContext(Ruta_importacionContext.class,i);
		}
		public Seccion_importacionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccion_importaciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).enterSeccion_importaciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).exitSeccion_importaciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinVisitor ) return ((PigLatinVisitor<? extends T>)visitor).visitSeccion_importaciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Seccion_importacionesContext seccion_importaciones() throws RecognitionException {
		Seccion_importacionesContext _localctx = new Seccion_importacionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_seccion_importaciones);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(57);
				match(IMPORT);
				setState(58);
				ruta_importacion();
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Ruta_importacionContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFICADOR() { return getTokens(PigLatinParser.IDENTIFICADOR); }
		public TerminalNode IDENTIFICADOR(int i) {
			return getToken(PigLatinParser.IDENTIFICADOR, i);
		}
		public List<TerminalNode> PUNTO() { return getTokens(PigLatinParser.PUNTO); }
		public TerminalNode PUNTO(int i) {
			return getToken(PigLatinParser.PUNTO, i);
		}
		public Ruta_importacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruta_importacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).enterRuta_importacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).exitRuta_importacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinVisitor ) return ((PigLatinVisitor<? extends T>)visitor).visitRuta_importacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ruta_importacionContext ruta_importacion() throws RecognitionException {
		Ruta_importacionContext _localctx = new Ruta_importacionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_ruta_importacion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(IDENTIFICADOR);
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PUNTO) {
				{
				{
				setState(65);
				match(PUNTO);
				setState(66);
				match(IDENTIFICADOR);
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Seccion_global_variablesContext extends ParserRuleContext {
		public TerminalNode VARIABILES() { return getToken(PigLatinParser.VARIABILES, 0); }
		public TerminalNode MAYOR_QUE() { return getToken(PigLatinParser.MAYOR_QUE, 0); }
		public List<Declaracion_variableContext> declaracion_variable() {
			return getRuleContexts(Declaracion_variableContext.class);
		}
		public Declaracion_variableContext declaracion_variable(int i) {
			return getRuleContext(Declaracion_variableContext.class,i);
		}
		public Seccion_global_variablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccion_global_variables; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).enterSeccion_global_variables(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).exitSeccion_global_variables(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinVisitor ) return ((PigLatinVisitor<? extends T>)visitor).visitSeccion_global_variables(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Seccion_global_variablesContext seccion_global_variables() throws RecognitionException {
		Seccion_global_variablesContext _localctx = new Seccion_global_variablesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_seccion_global_variables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(VARIABILES);
			setState(73);
			match(MAYOR_QUE);
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ESTO || _la==SERIES) {
				{
				{
				setState(74);
				declaracion_variable();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Seccion_maiorContext extends ParserRuleContext {
		public TerminalNode MAIOR() { return getToken(PigLatinParser.MAIOR, 0); }
		public TerminalNode MAYOR_QUE() { return getToken(PigLatinParser.MAYOR_QUE, 0); }
		public TerminalNode FINIS() { return getToken(PigLatinParser.FINIS, 0); }
		public TerminalNode PUNTO_Y_COMA() { return getToken(PigLatinParser.PUNTO_Y_COMA, 0); }
		public List<Instruccion_flujoContext> instruccion_flujo() {
			return getRuleContexts(Instruccion_flujoContext.class);
		}
		public Instruccion_flujoContext instruccion_flujo(int i) {
			return getRuleContext(Instruccion_flujoContext.class,i);
		}
		public Seccion_maiorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seccion_maior; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).enterSeccion_maior(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).exitSeccion_maior(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinVisitor ) return ((PigLatinVisitor<? extends T>)visitor).visitSeccion_maior(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Seccion_maiorContext seccion_maior() throws RecognitionException {
		Seccion_maiorContext _localctx = new Seccion_maiorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_seccion_maior);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(MAIOR);
			setState(81);
			match(MAYOR_QUE);
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 139700099662846976L) != 0)) {
				{
				{
				setState(82);
				instruccion_flujo();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(88);
			match(FINIS);
			setState(89);
			match(PUNTO_Y_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Tipo_datoContext extends ParserRuleContext {
		public TerminalNode NUMERUS() { return getToken(PigLatinParser.NUMERUS, 0); }
		public TerminalNode TEXTUM() { return getToken(PigLatinParser.TEXTUM, 0); }
		public TerminalNode DECIMALIS() { return getToken(PigLatinParser.DECIMALIS, 0); }
		public TerminalNode LITTERA() { return getToken(PigLatinParser.LITTERA, 0); }
		public TerminalNode BOOL() { return getToken(PigLatinParser.BOOL, 0); }
		public TerminalNode IDENTIFICADOR() { return getToken(PigLatinParser.IDENTIFICADOR, 0); }
		public Tipo_datoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_dato; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).enterTipo_dato(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).exitTipo_dato(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinVisitor ) return ((PigLatinVisitor<? extends T>)visitor).visitTipo_dato(this);
			else return visitor.visitChildren(this);
		}
	}
